--- a/04-Ajax/homework/index.html
+++ b/04-Ajax/homework/index.html
@@ -8,11 +8,15 @@
   <title>HomeWork Ajax</title>
 </head>
 <body>
+  <h2>Ver Amigos</h2>
   <button id='boton'>Ver Amigos</button>
   <ul id='lista'>
   </ul>
 
-  <h2>Ver Amigos</h2>
+  <div id="respuesta">
+
+  </div>
+
   <img src='https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif' />
   <hr>
   <input id='input'></input>
