--- a/04-Ajax/homework/index.html
+++ b/04-Ajax/homework/index.html
@@ -22,6 +22,7 @@
   <input id='input'></input>
   <button id='search'>Buscar</button>
   <span id='amigo'></span>
+  <span id='noAmigo'></span>
 
   <hr>
   <input id='inputDelete'></input>
